--- a/AppPizzasWatch2 WatchKit App/Base.lproj/Interface.storyboard
+++ b/AppPizzasWatch2 WatchKit App/Base.lproj/Interface.storyboard
@@ -1,15 +1,241 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6221" systemVersion="13E28" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8092"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--tamanoPizza-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller identifier="tamanoPizza" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="AppPizzasWatch2_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <imageView alignment="center" image="TamanoPizza" id="0GJ-Zs-NnO"/>
+                        <button width="50" height="52" alignment="center" backgroundImage="PizzaChica" id="2S5-d0-a6d">
+                            <connections>
+                                <action selector="pizzaChica" destination="AgC-eL-Hgc" id="NhZ-j2-ALG"/>
+                            </connections>
+                        </button>
+                        <group width="1" alignment="left" id="i0H-TY-9nJ">
+                            <items>
+                                <button width="76" height="66" alignment="left" backgroundImage="PizzaGrande" id="1ux-sE-g8O">
+                                    <connections>
+                                        <action selector="pizzaGrande" destination="AgC-eL-Hgc" id="Rqw-c5-DIY"/>
+                                    </connections>
+                                </button>
+                                <button width="58" height="56" alignment="left" backgroundImage="PizzaMediana" id="QSX-jc-7LV">
+                                    <connections>
+                                        <action selector="pizzaMediana" destination="AgC-eL-Hgc" id="wvD-c0-qUD"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
             </objects>
+            <point key="canvasLocation" x="305" y="361"/>
+        </scene>
+        <!--ingredientes-->
+        <scene sceneID="C3X-tV-RaV">
+            <objects>
+                <controller identifier="ingredientes" hidesWhenLoading="NO" id="may-j9-F1C" customClass="IngredientesPizza" customModule="AppPizzasWatch2_WatchKit_Extension">
+                    <items>
+                        <group width="1" alignment="left" id="kpK-LR-Psb">
+                            <items>
+                                <button width="41" height="38" alignment="left" backgroundImage="Jamon" id="Hib-0r-OcS">
+                                    <connections>
+                                        <action selector="jamon" destination="may-j9-F1C" id="ycS-z8-HnY"/>
+                                    </connections>
+                                </button>
+                                <button width="41" height="38" alignment="right" backgroundImage="Pavo" id="87r-iz-dzR">
+                                    <connections>
+                                        <action selector="pavo" destination="may-j9-F1C" id="Ero-bW-RrK"/>
+                                    </connections>
+                                </button>
+                                <button width="41" height="38" alignment="center" backgroundImage="Pepperoni" id="Cse-Pp-vcd">
+                                    <connections>
+                                        <action selector="pepperoni" destination="may-j9-F1C" id="nJr-VF-RKc"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="4yl-9p-9S6">
+                            <items>
+                                <button width="41" height="38" alignment="left" backgroundImage="Salchicha" id="LxR-sO-2cD">
+                                    <connections>
+                                        <action selector="salchicha" destination="may-j9-F1C" id="WBn-uZ-qgv"/>
+                                    </connections>
+                                </button>
+                                <button width="41" height="38" alignment="center" backgroundImage="Aceituna" id="C0r-HV-LTl">
+                                    <connections>
+                                        <action selector="aceituna" destination="may-j9-F1C" id="TcT-3l-wWI"/>
+                                    </connections>
+                                </button>
+                                <button width="41" height="38" alignment="right" backgroundImage="Cebolla" id="6yp-Wx-I2l">
+                                    <connections>
+                                        <action selector="cebolla" destination="may-j9-F1C" id="ADi-Cg-iFH"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="ryz-Xb-aAw">
+                            <items>
+                                <button width="41" height="38" alignment="left" backgroundImage="Pimiento" id="gqF-EJ-tWe">
+                                    <connections>
+                                        <action selector="pimiento" destination="may-j9-F1C" id="lCl-C8-bnp"/>
+                                    </connections>
+                                </button>
+                                <button width="41" height="38" alignment="right" backgroundImage="Anchoa" id="V0O-C3-VUJ">
+                                    <connections>
+                                        <action selector="anchoa" destination="may-j9-F1C" id="R3a-lQ-jW1"/>
+                                    </connections>
+                                </button>
+                                <button width="41" height="38" alignment="center" backgroundImage="Piña" id="s4L-TB-uUv">
+                                    <connections>
+                                        <action selector="pina" destination="may-j9-F1C" id="cGt-0y-ANo"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="294" y="636"/>
+        </scene>
+        <!--confirmacion-->
+        <scene sceneID="4b2-CO-ucw">
+            <objects>
+                <controller identifier="confirmacion" hidesWhenLoading="NO" id="WRp-EF-a4O" customClass="ConfirmacionPizza" customModule="AppPizzasWatch2_WatchKit_Extension">
+                    <items>
+                        <imageView alignment="left" image="ContenidoPizza" id="50w-Dg-JsP"/>
+                        <table alignment="left" id="ena-rE-Tvu">
+                            <items>
+                                <tableRow identifier="Cell" id="iaM-B8-0LE" customClass="filaPizzaContenido" customModule="AppPizzasWatch2_WatchKit_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="pAx-kH-enU">
+                                        <items>
+                                            <label width="1" alignment="left" text="Label" id="XMW-sV-WXn"/>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="lblContenidoPizza" destination="XMW-sV-WXn" id="mtQ-3a-hUb"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                        <imageView alignment="left" image="Ingredientes" id="FUr-ra-gks"/>
+                        <table alignment="left" id="C1P-rG-Kwa">
+                            <items>
+                                <tableRow identifier="Cell2" id="Lfh-Bw-5Qz" customClass="filaIngredientes" customModule="AppPizzasWatch2_WatchKit_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="Y4b-bt-5T8">
+                                        <items>
+                                            <label width="1" alignment="left" text="Label" id="Pu5-KV-8KU"/>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="lblIngredientes" destination="Pu5-KV-8KU" id="ORa-bL-CQB"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                        <imageView alignment="center" image="Question" id="79I-0S-UIN"/>
+                        <group width="1" alignment="left" id="sJv-EA-rdA">
+                            <items>
+                                <button alignment="left" backgroundImage="NoSe" id="xvR-I4-ZhX">
+                                    <connections>
+                                        <segue destination="AgC-eL-Hgc" kind="push" id="Z3Y-fe-Uxq"/>
+                                    </connections>
+                                </button>
+                                <button alignment="right" backgroundImage="Si" id="Qj9-fR-lNK">
+                                    <connections>
+                                        <segue destination="xpl-Ir-KaW" kind="modal" id="mWU-4c-pEj"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="tableViewContenidoPizza" destination="ena-rE-Tvu" id="tcx-ep-hpA"/>
+                        <outlet property="tableViewIngredientes" destination="C1P-rG-Kwa" id="Xta-hW-5j4"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="591" y="663"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="6zW-NC-DcE">
+            <objects>
+                <controller hidesWhenLoading="NO" id="xpl-Ir-KaW">
+                    <items>
+                        <imageView alignment="center" verticalAlignment="center" image="Gracias" id="wlS-r2-4uw"/>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="832" y="642"/>
+        </scene>
+        <!--tipoDeMasa-->
+        <scene sceneID="S2o-Nj-smg">
+            <objects>
+                <controller identifier="tipoDeMasa" hidesWhenLoading="NO" id="Y9v-if-hrM" customClass="TipoMasaPizza" customModule="AppPizzasWatch2_WatchKit_Extension">
+                    <items>
+                        <imageView alignment="center" image="Tipo Masa" id="gaO-hM-crJ"/>
+                        <button alignment="center" backgroundImage="Delgada" id="7e1-iZ-EEu">
+                            <connections>
+                                <action selector="masaDelgada" destination="Y9v-if-hrM" id="rOs-S2-b5U"/>
+                            </connections>
+                        </button>
+                        <button alignment="center" backgroundImage="Crujiente" id="KEi-tn-6no">
+                            <connections>
+                                <action selector="masaCrujiente" destination="Y9v-if-hrM" id="3Yb-T8-KXs"/>
+                            </connections>
+                        </button>
+                        <button alignment="center" backgroundImage="Gruesa" id="DbQ-FV-2rK">
+                            <connections>
+                                <action selector="masaGruesa" destination="Y9v-if-hrM" id="mZf-Ml-EOg"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="568" y="350"/>
+        </scene>
+        <!--tipoDeQueso-->
+        <scene sceneID="qRJ-NF-xzH">
+            <objects>
+                <controller identifier="tipoDeQueso" hidesWhenLoading="NO" id="ViM-vl-Uh4" customClass="TipoQuesoPizza" customModule="AppPizzasWatch2_WatchKit_Extension">
+                    <items>
+                        <imageView alignment="center" image="Tipo Queso" id="fV5-Gj-E8Y"/>
+                        <group width="1" alignment="left" id="U5m-7z-Yjn">
+                            <items>
+                                <button width="62" height="47" alignment="left" backgroundImage="Parmesano" id="NlJ-eh-6nT">
+                                    <connections>
+                                        <action selector="quesoParmesano" destination="ViM-vl-Uh4" id="Ovm-B0-fJU"/>
+                                    </connections>
+                                </button>
+                                <button width="62" height="47" alignment="left" backgroundImage="Mozarela" id="gR7-ub-EZA">
+                                    <connections>
+                                        <action selector="quesoMozarela" destination="ViM-vl-Uh4" id="r8j-WZ-t5h"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" id="lkF-CC-ScF">
+                            <items>
+                                <button width="62" height="47" alignment="left" backgroundImage="Cheddar" id="g3j-gv-LRt">
+                                    <connections>
+                                        <action selector="quesoCheddar" destination="ViM-vl-Uh4" id="Aov-qE-Ny9"/>
+                                    </connections>
+                                </button>
+                                <button width="62" height="47" alignment="left" backgroundImage="Sinqueso" id="uzp-kZ-39M">
+                                    <connections>
+                                        <action selector="sinQueso" destination="ViM-vl-Uh4" id="C5a-x6-sII"/>
+                                    </connections>
+                                </button>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="817" y="350"/>
         </scene>
     </scenes>
 </document>
